--- a/timetracker/entries/templates/projects.html
+++ b/timetracker/entries/templates/projects.html
@@ -4,9 +4,22 @@
 
 {% block content %}
   <h2>Projects</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ project_form.as_p }}
+    <input type="submit" name="submit" value="Create Project">
+  </form>
+
   <ul>
     {% for project in project_list %}
-    <li>{{ project.name }} (<a href="{% url 'client-detail' pk=project.client.pk %}">{{ project.client.name }}</a>)</li>
+    <li>
+      <a href="{% url 'project-detail' pk=project.pk %}">{{ project.name }}</a>
+      {% if project.client %}
+        (<a href="{% url 'client-detail' pk=project.client.pk %}">{{ project.client.name }}</a>)
+      {% else %}
+        (<i>no client</i>)
+      {% endif %}
+   </li>
     {% endfor %}
   </ul>
 {% endblock %}
